Add delete scheduled event link

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -18,6 +18,7 @@ iliasopencast.translation = {
     txt_none_finished : "{TXT_NONE_FINISHED}",
     txt_none_scheduled : "{TXT_NONE_SCHEDULED}",
     txt_none_onhold : "{TXT_NONE_ONHOLD}",
+    txt_delete: "{TXT_DELETE}",
 }
 
 })();
@@ -127,7 +128,7 @@ iliasopencast.translation = {
 <div class="ilTableOuter">
 <table class="fullwidth">
 <thead>
-<tr class="tblheader"><th class="std">{TXT_TITLE}</th><th class="std">{TXT_STARTDATE}</th><th class="std">{TXT_ENDDATE}</th><th  class="std">{TXT_LOCATION}</th></tr>
+<tr class="tblheader"><th class="std">{TXT_TITLE}</th><th class="std">{TXT_STARTDATE}</th><th class="std">{TXT_ENDDATE}</th><th  class="std">{TXT_LOCATION}</th><th class="std">{TXT_ACTION}</th></tr>
 </thead>
 <tbody id="iliasopencast_scheduledtable">
 </tbody>
