--- a/templates/theodul/ui/css/core_desktop_style_top.css
+++ b/templates/theodul/ui/css/core_desktop_style_top.css
@@ -1,9 +1,9 @@
 /*Core desktop css rules*/
 
-body {
+/*body {
     min-width: 840px;
     font-family: Arial, sans-serif;
-}
+}*/
 
 #btn_fullscreenCancel {
     z-index: 999;
@@ -11,10 +11,10 @@ body {
     margin: 30px 30px 0px 0px;
 }
 
-h1, h2, h3 {
+/*h1, h2, h3 {
     font-weight: normal;
     line-height: 22px;
-}
+}*/
 
 #engage_tab_content {
     padding: 5px 0px 10px 20px;
