Add checkbox to enable triming during upload. Fixes #7

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -56,6 +56,11 @@ iliasopencast.translation = {
   </div>
 </div>
 <div class="row top10">
+  <div class="form-group col-md-6 checkbox">
+    <label><input type="checkbox" class="" required="false" aria-describedby="basic-addon4" id="iliasopencast_trimeditor" name="trimeditor" value="">{TXT_TRIMEDITOR}</label>
+  </div>
+</div>
+<div class="row top10">
     <div class="col-md-12">
         <div data-iliasopencast_nothingToUpload>{TXT_NO_FILES}</div>
         <div id="iliasopencast_results" class="panel"></div>{TXT_FILE}
