--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -21,6 +21,7 @@ iliasopencast.translation = {
     txt_delete: "{TXT_DELETE}",
     txt_uploading: "{TXT_UPLOADING}",
     txt_done_uploading: "{TXT_DONE_UPLOADING}",
+    txt_upload_canceled: "{TXT_UPLOAD_CANCELED}",
 }
 
 })();
@@ -69,6 +70,7 @@ iliasopencast.translation = {
         <div class="alert-box secondary"></div>
         <button class="btn btn-default" id="iliasopencast_browseButton">{TXT_SELECT_FILE}</button>
         <button class="btn btn-primary disabled" id="iliasopencast_uploadFiles">{TXT_UPLOAD_FILE}</button>
+        <button class="btn btn-primary disabled" id="iliasopencast_cancelUpload">{TXT_CANCEL_UPLOAD}</button>
     </div>
 </div>
 <!-- uploadsectionend -->
