Add ployfill for Array.from to run on IE11

--- a/templates/default/tpl.player.html
+++ b/templates/default/tpl.player.html
@@ -1,3 +1,4 @@
+<script src="{INITJS}/js/ployfill.arrayfrom.js"></script>
 <script data-main="{INITJS}/ui/engage_init" src="{INITJS}/ui/js/lib/require.js"></script>
 <link rel="stylesheet" type="text/css" href="{INITJS}/ui/css/core_global_style.css" />
 <noscript>
