--- a/templates/theodul/ui/templates/core_desktop_top.html
+++ b/templates/theodul/ui/templates/core_desktop_top.html
@@ -4,7 +4,7 @@
     <!-- timeline plugin container -->
     <div id="engage_timeline_plugin"></div>
     <div id="engage_timeline_expand_btn">
-        <img id="engage_timeline_expand_btn_img" src="/%iliasbasedir%/Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn/templates/theodul/ui/img/pulldown.png" />
+        <img id="engage_timeline_expand_btn_img" src="ui/img/pulldown.png" />
     </div>
 </div>
 <!-- content container -->
