extracted method getLinkForEpisodeUnescaped removed convertAmpersand extracted html template from edit.js to edit.html #54

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -9,7 +9,7 @@ var settings = {
   uploadtarget : "Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn/MHUpload",
   seriesid : "{SERIES_ID}",
   processingcmd : "{CMD_PROCESSING}",
-  cols_finished : {COLS_FINISHED}
+  manualRelease : {MANUAL_RELEASE}
 }
 $.extend(true,iliasopencast.settings, settings);
 
