replaced mustache 2.2.0 with 2.3.0 min version #54

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -152,7 +152,7 @@ iliasopencast.translation = {
 
 <!-- BEGIN pageend -->
 <script src="{INITJS}/resumable.js"></script>
-<script src="{INITJS}/mustache.js"></script>
+<script src="{INITJS}/mustache.min.js"></script>
 <script src="{INITJS}/bootstrap-datepicker.js"></script>
 <script src="{INITJS}/bootstrap-timepicker.min.js"></script>
 <script src="{INITJS}/edit.js"></script>
