--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -153,7 +153,7 @@ iliasopencast.translation = {
 <!-- BEGIN pageend -->
 <script src="{INITJS}/resumable.js"></script>
 <script src="{INITJS}/mustache.min.js"></script>
-<script src="{INITJS}/bootstrap-datepicker.js"></script>
+<script src="{INITJS}/bootstrap-datepicker.min.js"></script>
 <script src="{INITJS}/bootstrap-timepicker.min.js"></script>
 <script src="{INITJS}/edit.js"></script>
 </div>
