used ilias style for headers

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -31,7 +31,7 @@ iliasopencast.translation = {
 <!-- uploadsection -->
 <div class="row">
   <div class=" col-md-12">
-    <H2>{TXT_ADD_NEW_EPISODE}</H2>
+    <h3 class="ilHeader">{TXT_ADD_NEW_EPISODE}</h3>
   </div>
 </div>
 <div class="row">
@@ -79,7 +79,7 @@ iliasopencast.translation = {
 <!-- BEGIN finishedstart -->
 <div class="row">
 <div class="col-md-12">
-<H2>{TXT_FINISHED_RECORDINGS}</H2>
+<h3 class="ilHeader">{TXT_FINISHED_RECORDINGS}</h3>
 <div class="ilTableOuter">
 <table class="fullwidth">
 <thead>
@@ -102,7 +102,7 @@ iliasopencast.translation = {
 <!-- BEGIN processing -->
 <div class="row">
 <div class="col-md-12">
-<H2>{TXT_PROCESSING}</H2>
+<h3 class="ilHeader">{TXT_PROCESSING}</h3>
 <div class="ilTableOuter">
 <table class="fullwidth">
 <thead>
@@ -119,7 +119,7 @@ iliasopencast.translation = {
 <div class="row">
 <div class="col-md-12">
 
-<H2>{TXT_ONHOLD_RECORDING}</H2>
+<h3 class="ilHeader">{TXT_ONHOLD_RECORDING}</h3>
 <div class="ilTableOuter">
 <table class="fullwidth">
 <thead>
@@ -136,7 +136,7 @@ iliasopencast.translation = {
 <!-- BEGIN scheduled -->     
 <div class="row">
   <div class="col-md-12">
-    <H2>{TXT_SCHEDULED_RECORDING}</H2>
+    <h3 class="ilHeader">{TXT_SCHEDULED_RECORDING}</h3>
     <div class="ilTableOuter">
       <table class="fullwidth">
         <thead>
