--- a/templates/default/tpl.series.html
+++ b/templates/default/tpl.series.html
@@ -10,7 +10,7 @@
 <!-- BEGIN header -->     
 <H2>{TXT_FINISHED_RECORDINGS}</H2>
 <div class="ilTableOuter">
-<table class="fullwidth">
+<table class="fullwidth table table-striped">
 <thead>
 <tr class="tblheader"><th class="std">{TXT_PREVIEW}</th><th class="std">{TXT_TITLE}</th><th class="std">{TXT_DATE}</th></tr>
 </thead>
