--- a/templates/edit/edit.html
+++ b/templates/edit/edit.html
@@ -24,7 +24,7 @@
  <td class="std"><a href="{{viewurl}}">{{title}}</a></td>
  <td class="std"><a href="{{viewurl}}"><img src="{{previewurl}}" /></a></td>
  <td class="std">{{date}}</td>
- {{#manualRelease}}<td><a href="{{publishurl}}">{{txt_publish}}</a></td>{{/manualRelease}}
+ {{#manualRelease}}<td><a class="btn btn-default" href="{{publishurl}}">{{txt_publish}}</a></td>{{/manualRelease}}
 </tr>
 {{/episodes}}
 {{/finished}}
