--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -81,7 +81,7 @@ iliasopencast.translation = {
 <div class="col-md-12">
 <h3 class="ilHeader">{TXT_FINISHED_RECORDINGS}</h3>
 <div class="ilTableOuter">
-<table class="fullwidth">
+<table class="fullwidth table table-striped">
 <thead>
 <!-- END finishedstart -->
 <!-- BEGIN headerfinished -->
