--- a/templates/edit/edit.html
+++ b/templates/edit/edit.html
@@ -8,7 +8,7 @@
 <tr>
  <td class="std">{{title}}</td>
  <td class="std">{{date}}</td>
- <td class="std"><div class="progress-bar progress-bar-success" role="progressbar" style="width:{{processdone}}%">{{processcount}}</div></td>
+ <td class="std"><div class="progress"><div class="active progress-bar progress-bar-striped progress-bar-success" role="progressbar" style="width:{{processdone}}%">{{processcount}}</div></div></td>
  <td class="std">{{running}}</td>
 </tr>
 {{/episodes}}
