--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -7,10 +7,9 @@
 </script>
 <form action="{CMD_TRIM}" method="post">
 <input type="hidden" name="eventid" value="{WFID}" />
-<div class="container">
   <div class="row">
-    <div class="input-group">
-      <span class="input-group-addon" id="basic-addon1">{TXT_TRACK_TITLE}</span>
+    <div class="col-md-12 form-group">
+      <span class="form-label" id="basic-addon1">{TXT_TRACK_TITLE}</span>
       <input type="text" class="form-control" aria-describedby="basic-addon1" name="tracktitle" value="{TRACKTITLE}">
     </div>
   </div>
@@ -75,6 +74,6 @@
     <div class="col-md-6"><span class="pull-right"> <button type="button" class="btn btn-default" id="playtrimout"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_OUTPOINT}</button>   
     </span></div>
   </div>
-  <div class="row top5"><button type="submit" class="btn btn-primary" id="octrimbutton"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div>
-</from>
+  <div class="row top5"><div class="col-md-12"><button type="submit" class="btn btn-primary" id="octrimbutton"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div></div>
+</form>
 <!-- END formend -->  
