--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -12,7 +12,7 @@
 <div class="row">
 	<div class=" col-md-12 form-group">
 		<span class="form-label" id="basic-addon1">{TXT_TRACK_PRESENTER}</span>
-		<input type="text" class="form-control" required="true"
+		<input type="text" class="form-control"
 			aria-describedby="basic-addon1" id="iliasopencast_trackpresenter"
 			name="trackpresenter" value="">
 	</div>
