button style for delete scheduled action fixed html syntax

--- a/templates/edit/edit.html
+++ b/templates/edit/edit.html
@@ -53,7 +53,7 @@
  <td class="std">{{startdate}} </td>
  <td class="std"> {{stopdate}} </td>
  <td class="std">{{location}} </td>
- <td class="std"><a href="{{deletescheduledurl}}">{{txt.txt_delete}}</a></td>
+ <td class="std"><a class="btn btn-default" href="{{deletescheduledurl}}">{{txt.txt_delete}}</a></td>
 </tr>
 {{/episodes}}
 {{/scheduled}}
