--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -64,11 +64,11 @@
 <!-- BEGIN formend -->  
   <div class="row top5">
     <div class="col-md-6">{TXT_INPOINT}</div>
-    <div class="col-md-6"><span class="pull-right">{TXT_OUTPOINT}</div>
+    <div class="col-md-6"><span class="pull-right">{TXT_OUTPOINT}</span></div>
   </div>
   <div class="row top5">
     <div class="col-md-6"><input name="trimin" value="0:00:00" id="trimin"><button id="settrimin" type="button" class="btn btn-default"><span class="glyphicon"></span> {TXT_SET_TO_CURRENT_TIME}</button></div>
-    <div class="col-md-6"><span class="pull-right"><input name="trimout" value="{TRACKLENGTH}" id="trimout" ><button id="settrimout" type="button" class="btn btn-default"><span class="glyphicon"></span> {TXT_SET_TO_CURRENT_TIME}</button></div>
+    <div class="col-md-6"><span class="pull-right"><input name="trimout" value="{TRACKLENGTH}" id="trimout" ><button id="settrimout" type="button" class="btn btn-default"><span class="glyphicon"></span> {TXT_SET_TO_CURRENT_TIME}</button></span></div>
   </div>
   <div class="row top5">
     <div class="col-md-6"><button type="button" class="btn btn-default" id="playtrimin"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_INPOINT}</button>
@@ -77,5 +77,6 @@
     </span></div>
   </div>
   <div class="row top5"><button type="submit" class="btn btn-primary" id="octrimbutton"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div>
-</from>
+</div>
+</form>
 <!-- END formend -->  
