fixed #18 variable size of the processing table

--- a/templates/default/tpl.empty_table.html
+++ b/templates/default/tpl.empty_table.html
@@ -1,6 +1,6 @@
 <!-- BEGIN table -->
 <div class="ilTableOuter">
-	<table class="fullwidth table table-striped">
+	<table class="fullwidth table table-striped" style="{TABLE_STYLE}">
 		<thead>
 			<tr>
 				<!-- BEGIN headercolumn -->
