removed MHUpload removed usage of internal opencast api ingest/* upload/* #61

--- a/templates/default/tpl.series.edit.js.html
+++ b/templates/default/tpl.series.edit.js.html
@@ -5,7 +5,7 @@ var iliasopencast = iliasopencast ||  {};
 (function(iliasopencast) {
 iliasopencast.settings = iliasopencast.settings || {}
 const settings = {
-  uploadtarget : "Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn/MHUpload",
+  pluginbasedir : "Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn",
   seriesid : "{SERIES_ID}",
   processingcmd : "{CMD_PROCESSING}",
   manualRelease : {MANUAL_RELEASE}
