--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -1,24 +1,22 @@
 <!-- BEGIN formstart -->
 <form id="trim-form" action="{CMD_TRIM}" method="post">
-<input type="hidden" name="episode_id" value="{EPISODE_ID}" />
+<input type="hidden" id="episode_id" value="{EPISODE_ID}" />
   <div class="row">
     <div class="col-md-12 form-group">
       <span class="form-label" id="basic-addon1">{TXT_TRACK_TITLE}</span>
-      <input type="text" class="form-control" aria-describedby="basic-addon1" name="tracktitle" value="{TRACKTITLE}">
+      <input type="text" class="form-control" aria-describedby="basic-addon1" id="episodetitle" value="{TRACKTITLE}">
     </div>
+  </div>
+  <div class="row">
+      <input type="hidden" id="inputStreamType" value="{INPUTSTREAMTYPE}">
   </div>
 <!-- END formstart -->
 <!-- BEGIN dualstream -->
   <div class="row">
-    <div class="col-md-6">{TXT_LEFT_TRACK}<input type="checkbox" id="lefttrack" name="lefttrack" checked></div>
-    <div class="col-md-6"><span class="pull-right">{TXT_RIGHT_TRACK}<input type="checkbox" id="righttrack" name="righttrack" checked></span></div>
+    <div class="col-md-6">{TXT_LEFT_TRACK}<input type="checkbox" id="lefttrack" checked></div>
+    <div class="col-md-6"><span class="pull-right">{TXT_RIGHT_TRACK}<input type="checkbox" id="righttrack" checked></span></div>
   </div>
 <!-- END dualstream -->
-<!-- BEGIN singlestream -->
-  <div class="row">
-      <input type="hidden" name="singletrack" value="{SINGLETRACK}">
-  </div>
-<!-- END singlestream -->
 <!-- BEGIN video -->  
   <div class="row">
     <video id="ocpreviewvideo" class="center-block video-js vjs-default-skin"
