fixed pull right in trim template

--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -50,7 +50,7 @@
     <div class="col-sm-6 pull-right">
       <div class="pull-right">
         <div>{TXT_OUTPOINT}</div>
-        <div class="input-group pull-right">
+        <div class="input-group">
           <input value="{TRACKLENGTH}" id="trimout" >
           <button id="settrimout" type="button" class="btn btn-default">
             {TXT_SET_TO_CURRENT_TIME}
