removed download preview link

--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -27,11 +27,10 @@
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-6">
-      <a href="{DOWNLOAD_PREVIEW_URL_MP4}" download>{TXT_DOWNLOAD_PREVIEW}</a>
+    <div class="col-sm-12">
+      <div id="slider-range" data-time="{TRACKLENGTH}"></div>
     </div>
   </div>
-  <div class="form-group"><div class="col-md-12">    <div id="slider-range" data-time="{TRACKLENGTH}"></div></div></div>
 <!-- END video -->  
 <!-- BEGIN formend -->  
   <div class="form-group">
@@ -61,7 +60,7 @@
     </div>
   </div>
   <div class="form-group">
-    <div class="col-md-12">
+    <div class="col-sm-12">
       <button type="submit" class="btn btn-primary" id="octrimbutton"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button>
     </div>
   </div>
