--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -20,7 +20,7 @@
     <div class="col-sm-12">
       <video id="ocpreviewvideo" class="center-block video-js vjs-default-skin"
         controls preload="auto" width="640" height="264"
-        data-setup='{"inactivityTimeout": 0 }'>
+        data-setup='{"inactivityTimeout": 0, "fluid": true }'>
         <source src="{DOWNLOAD_PREVIEW_URL_MP4}" type='video/mp4' />
         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
       </video>
